--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,11 @@ PROJECT(dmlexertk)
 LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 INCLUDE(cmake/ModuleImport.cmake)
 INCLUDE(cmake/ModuleCompileOptions.cmake)
+INCLUDE(cmake/GetGitInfo.cmake)
+
 ModuleSetCompileOptions()
+
+GetGitInfo()
 
 InterfaceImport("dmlexertk" "include" "")
 
